# aguil

./: CMakeLists.txt  LICENSE  ReadMe.md
include/: .application.h.swp  .window.h.swp  application.h  component.h  context.h  data.h  style.h  window.h
src/: .application.c.swp  .component.c.swp  .main.c.swp  .window.c.swp  application.c  component.c  data.c  main-demo.c  main.c  style.c  window.c
